--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,6 +17,7 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            entry_point: App\Security\AuthAuthenticator  # 👈 Add this line
             form_login:
                 login_path: login
                 check_path: login
