feat: implement KnpPaginator for user management

--- a/config/packages/mailer.yaml
+++ b/config/packages/mailer.yaml
@@ -1,3 +1,6 @@
 framework:
     mailer:
-        dsn: '%env(MAILER_DSN)%'
+        envelope:
+            sender: 'bayaraziz2001@gmail.com'
+        headers:
+            X-Transport: smtp
