--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,8 +32,12 @@ security:
                 csrf_parameter: _csrf_token
             remember_me:
                 secret: '%kernel.secret%'
-                lifetime: 604800
-                path: /
+                lifetime: 604800 # 1 week in seconds
+                # by default, the feature is enabled by checking a
+                # checkbox in the login form (see below), uncomment the
+                # following line to always enable it.
+                #always_remember_me: true
+
 
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
