amelioration de projet

--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=279b83ec985eb6559ee070ad07a82cb8
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-DATABASE_URL="mysql://root@127.0.0.1:3306/nova_travel1"
+DATABASE_URL="mysql://root@127.0.0.1:3306/nova"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
