--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=279b83ec985eb6559ee070ad07a82cb8
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-DATABASE_URL="mysql://root@127.0.0.1:3306/nova"
+DATABASE_URL="mysql://root@127.0.0.1:3306/nova_travel"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
@@ -37,5 +37,19 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=null://null
-###< symfony/mailer ###
+MAILER_DSN="smtp://bayaraziz2001@gmail.com:aziztaraji02@smtp.gmail.com:587"
+###> knpuniversity/oauth2-client-bundle ###
+OAUTH_FACEBOOK_CLIENT_ID=676827835284769
+OAUTH_FACEBOOK_CLIENT_SECRET=7db0f748d577a5b97b2c059ccd51ce37
+OAUTH_FACEBOOK_REDIRECT_URI=https://localhost/connect/facebook/check
+OAUTH_FACEBOOK_REDIRECT_URI_HTTP=http://localhost/connect/facebook/check
+OAUTH_FACEBOOK_REDIRECT_URI_HTTPS_IP=https://127.0.0.1/connect/facebook/check
+OAUTH_FACEBOOK_REDIRECT_URI_HTTP_IP=http://127.0.0.1/connect/facebook/check
+OAUTH_GOOGLE_CLIENT_ID=461955083842-bsm9k5t5cuekr9jhilnc5v1p3e3kl2lm.apps.googleusercontent.com
+OAUTH_GOOGLE_CLIENT_SECRET=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
+###< knpuniversity/oauth2-client-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ### 
